﻿PbootCMS V1.0.8 build 2018-05-10
1、新增图片上传直接显示及删除功能；
2、修复内容过滤参数及状态失效问题；
3、优化后台菜单显示视觉流畅性；

PbootCMS V1.0.8 build 2018-05-07
1、修复后台菜单高亮错误；
2、修改编辑器为不替换div和不自动拉高；
3、修复删除栏目时子类未全部删除问题；
4、新增后台栏目管理折叠功能；
5、新增手机版绑定独立域名功能；
6、修复多语言切换时栏目编码导致报错；
7、修复副栏目内容无法正常调取问题;
8、新增指定内容扩展字段多选输出标签;

PbootCMS V1.0.7 build 2018-05-02
1、采用LayUI新版管理后台；
2、修复后台单页无法显示更多问题；
3、调整默认分页数字条长度为5；
4、修复API调用全部自定义标签错误；
5、新增内容批量删除功能；
6、新增栏目批量删除功能；
7、修复面包屑对外链跳转问题；
8、修复栏目修改直接保存类型错误；
9、其它问题修复和优化；

PbootCMS V1.0.6 build 2018-04-24
1、修复无任何内容执行排序报错；
2、修复可能存在的跨站请求伪造漏洞；

PbootCMS V1.0.5 build 2018-04-23
1、新增后台配置项自动新增功能；
2、修复logo不自适应多级目录路径；
3、新增十类API调用，方便小程序、APP、Ajax等数据获取；
4、修复个别虚拟主机分页代码报警告问题;
5、新增服务器未开启sockets导致非加密发送邮件错误提示；


PbootCMS V1.0.4 build 2018-04-19
1、优化框架配置文件载入方式；
2、修复当前分类列表页过滤参数无效；
3、新增首页分页功能，大家可以做博客了；
4、新增模型类菜单桌面同步显示；
5、新增当前栏目位置标签；


PbootCMS V1.0.3 build 2018-04-16
1、修复多图输出只输出一张问题；
2、修复PHP7.1中合并多维数组警告；
3、修复登录地址末尾带有斜杠时错误；
4、新增配置文件自动去除Bom,避免空白；


PbootCMS V1.0.2 build 2018-04-14
1、新增自动去除模板的Bom信息，避免空白；
2、优化编辑器可见按钮；
3、修复编辑器无法插入动态地图问题；
4、修复文章排序无法按预期排列问题；


PbootCMS V1.0.1 build 2018-04-13
1、修复数据库导出未正常解码问题；
2、修复系统栏目出现多个新闻内容问题；
3、新增默认及内置区域不允许删除；
4、新增删除区域后强制重新登陆；
5、修复前端多语言无法正常切换问题；
6、修复新增语言无法匹配默认模板问题；
7、Mysql脚本默认内容解码有问题，大家重新导入sql;
8、修复友情链接图片无法自适应多级目录；


PbootCMS V1.0.0 build 2018-04-12
1、正式发布第一个版本。



PbootCMS是翱云科技开发的全新内核的开源企业建站系统，系统以高效、简洁、强悍为开发目标，能够满足各类企业网站建设的需要；

系统采用高效、简洁的模板标签，只要懂HTML就可快速开发企业网站；  

系统采用PHP语言开发，使用自主研发的高速MVVM多层开发框架及多级缓存技术；

系统默认采用Sqlite轻型数据库，放入PHP空间即可直接使用，可选Mysql、Pgsql等数据库，满足各类存储需求；

系统采用基于Bootstrap开发的响应式管理后台，满足各类设备随时管理的需要。

    PBOOT CMS!想伱所想,让一切皆有可能!

    PBOOT CMS!为伱所想,让一切皆有可能!

    PBOOT CMS!做伱所想,让一切皆有可能!


系统主要功能列表：

	1、支持自定义内容模型；

	2、支持自定义内容字段；

	3、支持无限极内容栏目；

	4、支持自定义任意模板；

	5、支持自定义标题关键字描述；

	6、支持自定义内容页地址；

	7、支持全站伪静态；

	8、支持前端动态缓存；

	9、支持手机独立模板；

	10、支持多语言区域建站；

	11、支持自定义标签；

	12、支持在线留言及回复；

	13、支持多组幻灯片；

	14、支持多组友情链接；

	15、支持留言发送到多个邮箱；

	16、支持配置参照后台设置；

	17、支持后台完整权限管理；

	18、支持系统菜单自管理能力；

	19、支持系统操作日志记录；

	20、支持数据库在线管理；
	
	21、支持首页分页制作博客；
	
	22、支持API调用内容；