@@ -1,5 +1,8 @@
 ﻿Pboot框架更新日志：
 
+Pboot V1.3.0 2017-05-14
+	1.框架入口文件安全加强；
+
 Pboot V1.2.9 2017-04-22
 	1.修复分页qs警告问题；
 	2.优化API接口验证；
