@@ -8,6 +8,9 @@
  *  用户前端入口文件
  */
 
+// 定义为入口文件
+define('IS_INDEX', true);
+
 // 入口文件地址绑定
 define('URL_BLIND', 'home');
 
