@@ -1,7 +1,9 @@
-﻿PbootCMS V1.0.8 build 2018-05-10
+﻿PbootCMS V1.0.9 build 2018-05-14
 1、新增图片上传直接显示及删除功能；
 2、修复内容过滤参数及状态失效问题；
 3、优化后台菜单显示视觉流畅性；
+4、框架入口文件安全加强；
+5、面包屑新增indextext参数，配置"首页"文字；
 
 PbootCMS V1.0.8 build 2018-05-07
 1、修复后台菜单高亮错误；
